# oss-asset-upload

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: BUCKET.md  SKILL_USAGE.md
src/oss_asset_upload/: __init__.py  cli.py  config.py  media.py  naming.py  render.py  uploader.py
tests/: test_config.py  test_naming.py  test_render.py
